--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,9 @@ backend:
         - amplifyPush --simple
 frontend:
   phases:
+    preBuild:
+      commands:
+        - npm ci
     build:
       commands:
         - npm run build
