remove unnecessary api

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -36,6 +36,14 @@
 						"Name",
 						"Arn"
 					]
+				},
+				{
+					"category": "function",
+					"resourceName": "drunkfast",
+					"attributes": [
+						"Name",
+						"Arn"
+					]
 				}
 			]
 		}
